catch api error

--- a/report.ipynb
+++ b/report.ipynb
@@ -624,6 +624,135 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38783cf4-c814-4018-9460-b98999c70a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "90fc82f0-f8e7-4657-9fcb-380d3382a6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8927859733426337\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "# Word embeddings for two words\n",
+    "word1_embedding = np.array([0.2, 0.5, 0.8, 0.3])\n",
+    "word2_embedding = np.array([0.4, 0.1, 0.9, 0.5])\n",
+    "# Reshape the arrays to match the expected input shape of cosine_similarity\n",
+    "word1_embedding = word1_embedding.reshape(1, -1)\n",
+    "word2_embedding = word2_embedding.reshape(1, -1)\n",
+    "# Calculate cosine similarity\n",
+    "similarity = cosine_similarity(word1_embedding, word2_embedding)[0][0]\n",
+    "print(similarity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e61d46b6-3b3f-47de-908e-b05a100116f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.2, 0.5, 0.8, 0.3]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word1_embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "67b105c4-a97e-4e3d-838d-eda30413d2fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.random.randn(512,)\n",
+    "a = np.random.randn(10, 512)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b5f3934c-4dd4-4c16-9cd7-cce3788b27e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((10, 512), (512,))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape, b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e5057206-1e77-45fc-a235-12eccbca25d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.05204658, -0.04205554,  0.05956887,  0.05402496, -0.05648812,\n",
+       "        0.00711165, -0.02923644,  0.0358371 , -0.00090821,  0.01128846])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_norm = np.linalg.norm(a, axis=1)\n",
+    "b_norm = np.linalg.norm(b)\n",
+    "(a @ b) / (a_norm * b_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9df85a3b-a635-4409-91fc-7e808f6d364c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c425fd1-787a-485c-9aba-23cfcaaf6cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
